changed name to tbreak

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Leaves - Quit Weed & Cannabis App",
-  "short_name": "Leaves",
+  "name": "TBreak - Quit Weed & Cannabis App",
+  "short_name": "TBreak",
   "description": "Track your cannabis sobriety journey, manage withdrawal symptoms, and connect with a supportive community",
   "start_url": "/",
   "display": "standalone",
